# pyReanultODBII-ELM327

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_obd_analyzer.py  test_obd_mock.py  test_smoke.py
data/: obd_data.db  test_fault_sched.db  test_obd.csv
src/: debug_log.py  permissions.py  storage_paths.py
src/analysis/: __init__.py  csv_writer.py  fuel_analyzer.py  m21_snapshot.py  obd_session_analyzer.py
src/config/: pids.yaml
src/diagnostics/: __init__.py  scanner.py
src/pids/: __init__.py  decoders.py  registry.py
src/protocol/: __init__.py  elm327.py
src/pyren/: __init__.py  ecu_database.py  renault_scanner.py
src/scheduler/: __init__.py  logger_scheduler.py
src/storage/: __init__.py  sqlite_storage.py  storage_paths.py
src/transport/: __init__.py  base.py  bluetooth_windows.py  fault_inject.py  mock.py  serial_windows.py  spp_android.py
src/ui/: app.py
